# mist

./: .gitignore  CLAUDE.md  CMakeLists.txt  DISTRIBUTED_COMM_PLAN.md  DSL_DESIGN.md  Makefile  README.md  demo.cpp  mist.hpp  pyproject.toml  test_mist_exe.py
docs/: core.md  distributed.md  driver.md  parallelism.md  pipeline-execution.md  serialization-design.md
docs/math/: tensor_identity.tex
examples/: CMakeLists.txt
examples/advect1d/: CMakeLists.txt  advect1d.cpp  plot_scaling.py  run_advect1d.py  scaling.mist  test_physics.sh  test_scaling.sh  test_simple.mist
examples/advection-1d/: Makefile  advection-1d.cfg  advection-1d.cpp  config.cfg  initial.cfg  physics.cfg  test_interactive.sh
examples/advection-1d-decomp/: Makefile  advection-1d-decomp.cpp  plot_scaling.py  program.mist  test_mp.mist  test_quick.mist  test_scaling.sh
examples/advection-1d-parallel/: .gitignore  Makefile  README.md  advection-1d-parallel.cpp
examples/config-reader/: CMakeLists.txt  config-reader.cpp  example.cfg
examples/laplacian2d/: CMakeLists.txt  helpers.hpp  laplacian2d  laplacian2d.cpp
examples/srhd1d/: CMakeLists.txt  srhd1d.cpp  test_physics.sh  test_simple.mist
include/mist/: archive.hpp  archive_traits.hpp  ascii_reader.hpp  ascii_writer.hpp  binary_reader.hpp  binary_writer.hpp  build_info.hpp.in  comm.hpp  core.hpp  driver.hpp  driver_dep.hpp  exec_context.hpp  mist.hpp  ndarray.hpp  parallel.hpp  pipeline.hpp  profiler.hpp  runge_kutta.hpp  serialize.hpp  socket.hpp
include/mist/archive/: README.md  archive.hpp  checkpoint.hpp  distributed.hpp  format.hpp  protocol.hpp  sink.hpp  source.hpp
include/mist/driver/: command.hpp  communicator.hpp  distributed_session.hpp  engine.hpp  engine.ipp  mpi_communicator.hpp  physics_impl.hpp  physics_interface.hpp  repl_session.hpp  repl_session.ipp  response.hpp  socket_session.hpp  socket_session.ipp  state.hpp
include/mist/experimental/: tensor.hpp
include/mist/parallel/: algorithm.hpp  automaton.hpp  communicator.hpp  executor.hpp  pipeline.hpp  profiler.hpp  queue.hpp  scheduler.hpp
include/mist/serialize/: ascii_reader.hpp  ascii_writer.hpp  binary_reader.hpp  binary_writer.hpp  core.hpp  parallel.hpp  parallel_io.hpp  serialize.hpp
mist/: __init__.py  __main__.py  mist_archive.py  mist_exe.py  plot_products.py
python/: mist_archive.py  test_mist_exe.py
python/mist/: __main__.py
src/driver/: distributed_session.cpp  engine.cpp  mpi_communicator.cpp  repl_session.cpp  socket_session.cpp
tests/: CMakeLists.txt  Makefile  test_archive.cpp  test_comm.cpp  test_comm_mpi.cpp  test_mist_archive.py  test_ndarray.cpp  test_serialize.cpp  test_tensor.cpp  write_test_binaries  write_test_binaries.cpp
